CM DRM E2E req implemented (#5)
* uddate:
-DRB - physics, initial positioning of nodes, small fixes

* uddate:
-DRB - physics, initial positioning of nodes, small fixes

* tweaks of measurements graph

* tweaks of measurements graph

* tweaks of CM based on E2E

* concluding comments added

* time axis fix removed

* min,max,mid values lines fixed.

* cards further condensed.

* Date picker unified. Graph legend simplified.

* Date picker condensed
.

* console prints eliminated

* view all removed for less confusion when selecting dates

* Follow up appintments added

* interface tweaks

* interface tweaks

* link parameters added to show only some ind'ormation, min/mid/max lines switch added in observations graph

* central text

* graph right axis added

* hack for multi nvd3 graph to show the same x range for both Y axes. Hack to hide hovered points for multigraph when tooltip shown. Morisky scale shown with same component as other measurements/observations.

* separate measurement graphs option added. routing for particular graph type added

* focus one year when switching separate / combined graph

* uddate:
-DRB - E2E fixes - tooltips, undo, shadows

* focus one year when switching separate / combined graph

* button visibility fixed

* dates picker modularised and parametrised

* datepicker fixed. single graphs in 2 columns

* Revert "dates picker modularised and parametrised"

This reverts commit af108e0

* Date picker module added. Test service for patient data overview added.

* Date picker module added. Test service for patient data overview added.

* loading spinners added. medication and teratment detail view added

* loading spinners added for separate graphs.

* DRB links to CM added

* sync with FIT

* sync with FIT

* sync with FIT

--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
@@ -1,7 +1,6 @@
 <div class="card">
   <div class="card-header w3-orange w3-center">
-    <div class="vericaltext" i18n="Patient Clinicians History"><i class="fa fa-medkit"></i> Patient Clinicians History
-
+    <div i18n="Concluding Comments "><i class="fa fa-medkit"></i> Concluding Comments
       <span class="w3-right">
 
       <span *ngIf="(progress.percentage < 100)">
@@ -56,29 +55,42 @@
     <!--
     <ng2-smart-table class="table table-striped table-bordered table-sm" [settings]="settings" [source]="clinicians"></ng2-smart-table>
 -->
-    <table class="table table-striped table-bordered table-sm" [mfData]="clinicians" #mf="mfDataTable"
+    <table class="table table-striped table-bordered table-sm" [mfData]="concludingComments" #mf="mfDataTable"
            [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
       <thead>
       <tr>
-        <mfDefaultSorter by="name">
-          Name
-        </mfDefaultSorter>
-        <th i18n="Institution">Institution</th>
-        <th i18n="Speciality">Speciality</th>
-        <th i18n="Start Date">Start Date</th>
-        <th i18n="End Date">End Date</th>
+
+        <th i18n="Date">
+          <mfDefaultSorter by="date">
+            Date
+          </mfDefaultSorter>
+        </th>
+        <th i18n="Author">
+          <mfDefaultSorter by="author"> Author</mfDefaultSorter>
+        </th>
+        <th i18n="Addressee">
+          <mfDefaultSorter by="addresseeName">
+            Addressee
+          </mfDefaultSorter>
+        </th>
+        <th i18n="Addressee Role">
+          <mfDefaultSorter by="addresseeRole">
+            Addressee Role
+          </mfDefaultSorter>
+        </th>
+        <th i18n="Comments">Comments</th>
 
       </tr>
       </thead>
       <tbody>
 
-      <tr *ngFor="let clinician of mf.data">
+      <tr *ngFor="let comments of mf.data">
 
-        <td>{{clinician.name}}</td>
-        <td>{{clinician.institution}}</td>
-        <td>{{clinician.speciality}}</td>
-        <td>{{clinician.startDate}}</td>
-        <td>{{clinician.endDate}}</td>
+        <td>{{comments.date}}</td>
+        <td>{{comments.author}}</td>
+        <td>{{comments.addresseeName}}</td>
+        <td>{{comments.addresseeRole}}</td>
+        <td>{{comments.comments}}</td>
 
       </tr>
 
@@ -98,3 +110,6 @@
 
 
 </div>
+
+
+
