--- a/src/app/modules/clinician-manager/cards/patient-range-picker.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-range-picker.component.css
@@ -10,8 +10,6 @@
   border-radius: 10px;
 }
 
-
-
 .card-footer {
   padding: 0.25rem;
 }
@@ -53,6 +51,21 @@ pagination {
   height: 12px;
 }
 
+button {
+  background-color: #eee;
+  padding: 0.25rem 0.25rem;
+  border-radius: 10px;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
 
 
 
