--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -54,7 +54,9 @@
         <a class="nav-link" [routerLink]="['/patient-id']"><i class="fa fa-search" aria-hidden="true"></i>Select Patient</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/clinician-manager']"><i class="icon-speedometer"></i>Patient data viewer</a>
+        <a class="nav-link" [routerLink]="['/clinician-manager/all/all/lastyear']"><i class="icon-speedometer"></i>Patient
+          data
+          viewer</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Care setting</a>
