--- a/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.css
@@ -1,9 +1,3 @@
-.network-canvas {
-    width: 100%;
-    height: 600px;
-    border: 1px solid lightgray;
-}
-
 .card {
   border-radius: 10px;
 }
@@ -14,6 +8,22 @@
 
 .card-header {
   border-radius: 10px;
+}
+
+.card-footer {
+  padding: 0.25rem;
+}
+
+.card-block {
+  padding: 0.25rem;
+}
+
+.card-header {
+  padding: 0.25rem;
+}
+
+.card {
+  margin-bottom: 0.25rem;
 }
 
 .table-sm td {
@@ -35,8 +45,13 @@
   padding: 0.25rem;
 }
 
-pagination {
-  padding: 0;
-  margin: 0;
-  height: 12px;
+ul.pagination {
+
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+
 }
+
+
+
+
