--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -82,7 +82,8 @@
   </div>
 
   <div class="card-footer w3-white">
-    <div class="w3-tiny w3-right">Scroll the timeline draging it with mouse. Zoom using Alt key + mouse scroll. Click
+    <div class="w3-tiny w3-right">Click timeline to use it. Scroll the timeline draging with mouse. Zoom using Alt key +
+      mouse scroll. Click
       chosen treatment to view it's details.
     </div>
 
